--- a/Accordion/index.html
+++ b/Accordion/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,31 +16,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Accordion</h1>
-        <div class="row">
-            <a>Front-end</a><i class="fas fa-chevron-down"></i>
-            <p class="panel">
-                The front end of a website is the best part that users interact with. Everything that you see when you’re
-                navigating around the Internet, from fonts and colors to dropdown menus and sliders
-            </p>
+    <main>
+        <div class="container">
+            <h1>Accordion</h1>
+            <div class="row">
+                <a>Front-end</a><i class="fas fa-chevron-down"></i>
+                <p class="panel">
+                    The front end of a website is the best part that users interact with. Everything that you see when youï¿½re
+                    navigating around the Internet, from fonts and colors to dropdown menus and sliders
+                </p>
+            </div>
+            <div class="row">
+                <a>Back-end</a><i class="fas fa-chevron-down"></i>
+                <p class="panel">
+                    The back end of a website consists of a server, an application, and a database. A back-end developer
+                    builds and maintains the technology that powers those components
+                </p>
+            </div>
+            <div class="row">
+                <a>API</a><i class="fas fa-chevron-down"></i>
+                <p class="panel">
+                    API is the acronym for Application Programming Interface, which is a software intermediary that allows
+                    two applications to talk to each other. Each time you use an app like Facebook, send an instant message,
+                    or check the weather on your phone, youï¿½re using an API.
+                </p>
+            </div>
         </div>
-        <div class="row">
-            <a>Back-end</a><i class="fas fa-chevron-down"></i>
-            <p class="panel">
-                The back end of a website consists of a server, an application, and a database. A back-end developer
-                builds and maintains the technology that powers those components
-            </p>
-        </div>
-        <div class="row">
-            <a>API</a><i class="fas fa-chevron-down"></i>
-            <p class="panel">
-                API is the acronym for Application Programming Interface, which is a software intermediary that allows
-                two applications to talk to each other. Each time you use an app like Facebook, send an instant message,
-                or check the weather on your phone, you’re using an API.
-            </p>
-        </div>
-    </div>
+    </main>
+    
     <script src="app.js"></script>
 </body>
 
