--- a/Tabs/index.html
+++ b/Tabs/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <main>
         <h1>Tabs with Html, Css & Js</h1>
         <div class="container">
             <div class="buttons">
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 
