--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -33,9 +33,9 @@
             </div>
         </div>
         <div class="choses-bar">
-            <button data-set-rock>rock</button>
-            <button data-set-paper>paper</button>
-            <button data-set-scissors>scissors</button>
+            <button data-option="rock">rock</button>
+            <button data-option="paper">paper</button>
+            <button data-option="scissors">scissors</button>
         </div>
     </main>
 
